:bug: fix shelf align

--- a/src/scss/components/_shelf.scss
+++ b/src/scss/components/_shelf.scss
@@ -49,7 +49,7 @@
   }
 
   li {
-    margin: 0 5px;
+    margin: 0 auto;
     max-width: 150px;
 
     &.slick-slide {
